<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="back">Back</string>
    <string name="description_label">Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="view_profile">View profile</string>
    <string name="purchase_coming_soon">Purchase flow for %s coming soon!</string>
    <string name="no_maps_app">No app available to open the map</string>
</resources>
